--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # diffviewer
 
 <!-- badges: start -->
-[![Codecov test coverage](https://codecov.io/gh/r-lib/diffviewer/branch/master/graph/badge.svg)](https://codecov.io/gh/r-lib/diffviewer?branch=master)
+[![Codecov test coverage](https://codecov.io/gh/r-lib/diffviewer/branch/main/graph/badge.svg)](https://codecov.io/gh/r-lib/diffviewer?branch=main)
 [![R-CMD-check](https://github.com/r-lib/diffviewer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/r-lib/diffviewer/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
