--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,8 @@ knitr::opts_chunk$set(
 # diffviewer
 
 <!-- badges: start -->
-[![Codecov test coverage](https://codecov.io/gh/r-lib/diffviewer/branch/master/graph/badge.svg)](https://codecov.io/gh/r-lib/diffviewer?branch=master)
-[![R build status](https://github.com/r-lib/diffviewer/workflows/R-CMD-check/badge.svg)](https://github.com/r-lib/diffviewer/actions)
+[![Codecov test coverage](https://codecov.io/gh/r-lib/diffviewer/branch/main/graph/badge.svg)](https://codecov.io/gh/r-lib/diffviewer?branch=main)
+[![R-CMD-check](https://github.com/r-lib/diffviewer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/r-lib/diffviewer/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 diffviewer provides an HTML widget for visually comparing files. It currently wraps three javascript libraries:
